2/3/2017 1.3.3.3

    programmer visible changes:
    * Added DISTINCT to the SELECT statement in get_all_installed_iids_needing_update, not need for repeated items.
    * Changed implementation for begin_get_for_all_oses, begin_get_for_specific_oses to be sqlite code instead of sqlalchemy
    * Added much needed session.commit's to fix creation of offline installers
    * CREATE TRIGGER got IF NOT EXISTS
    * Some more session.commits
    * get_all_iids implemented in SQL instead of sqlalchemy baked query
    * all_uninstall_items is sorted

28/2/2017 1.3.3.2

    programmer visible changes:
    * moved around some varible intialization to accommodate for creating offline installers for Mac on windows

21/2/3017 1.3.3.1

    user visible changes client:
    * Fixed issues with updating require_version and require_guid when two products have the same guid.

15/2/2017 1.3.3.0

    programmer visible changes:
    * Added '|' to characters that need escaping in dos branch files.
    * Version updated to 1.3.3.0 so we can set INSTL_MINIMAL_VERSION in index.yaml to 1.3.3 if '|' is in some var

15/2/2017 1.3.2.4

    user visible changes client:
    * CHECK_BINARIES_VERSION_FILE_EXCLUDE_REGEX will effect which files not to consider when doing version report
    programmer visible changes:
    * utils.compile_regex_list_ORed verbose default changed to False, because spaces in regexs should be consider
    * Disabled usage of Mac_dylib in report-versions because otool is available only on systems where developer tools were installed, so usage of otool cannot be deployed to users

8/2/2017 1.3.2.3

    user visible changes client:
    * fixed create_copy_instructions_for_file to correctly handle !file item that is wtar.
    * fixed report-versions where version is different between Mac and Windows

    programmer visible changes:
    * Fixed the reading of environment varaibles under "__environment__":
          - no more usage of regexs, just plain varaible names