@@ -73,7 +73,8 @@ class IndexItemRow(get_declarative_base()):
     inherit_resolved = Column(BOOLEAN, default=False)
     from_index = Column(BOOLEAN, default=False)
     from_require = Column(BOOLEAN, default=False)
-    status = Column(Integer, default=0)
+    install_status = Column(Integer, default=0)
+    ignore = Column(Integer, default=0)
 
     def __str__(self):
         resolved_str = "resolved" if self.inherit_resolved else "unresolved"
