@@ -31,6 +31,9 @@ class InstlClientUninstall(InstlClientRemove):
         # if true all main install items will be uninstalled regardless if they are indeed installed
         # and regardless if some other item depends on them
         force_uninstall_of_main_items = "FORCE_UNINSTALL_OF_MAIN_ITEMS" in var_stack
+        if "DO_NOT_REMOVE_TARGETS" in var_stack:
+            do_not_remove_iids = var_stack.ResolveVarToList("DO_NOT_REMOVE_TARGETS")
+            self.items_table.ignore_iids(do_not_remove_iids)
 
         iid_candidates_for_uninstall = var_stack.ResolveVarToList("__MAIN_INSTALL_IIDS__")
         req_trans_items = self.items_table.get_all_require_translate_items()
@@ -83,7 +86,12 @@ class InstlClientUninstall(InstlClientRemove):
         iids_that_should_not_be_uninstalled = list(set(iid_candidates_for_uninstall)-set(all_uninstall_items))
         var_stack.set_var("__ORPHAN_INSTALL_TARGETS__").extend(sorted(iids_that_should_not_be_uninstalled))
 
-        self.items_table.change_status_of_iids_to_another_status(0, -1, all_uninstall_items)
+
+        # mark all uninstall items
+        self.items_table.change_status_of_iids_to_another_status(
+            self.items_table.install_status["none"],
+            self.items_table.install_status["remove"],
+            all_uninstall_items)
         self.sort_all_items_by_target_folder()
 
     def create_uninstall_instructions(self):
